fixed scrollbars

--- a/client/src/css/ActorProfile.css
+++ b/client/src/css/ActorProfile.css
@@ -1,6 +1,8 @@
 .actorProfileView {
   align-items: center;
   margin-top: 2rem;
+  width: 100%;
+  overflow-y: hidden
 }
 
 .actorImageContainer {
